Update Stock Price Prediction Using LSTM.ipynb

--- a/Stock Price Prediction Using LSTM.ipynb
+++ b/Stock Price Prediction Using LSTM.ipynb
@@ -13,7 +13,7 @@
    "id": "9d59812b",
    "metadata": {},
    "source": [
-    "### AUTHOR : RELLI SAI RUPESH NAIDU"
+    "### AUTHOR : Y NITHIN"
    ]
   },
   {
